
CHANGELOG
=================================================

= 2.0.8 =
-------------------------------------------------
* Improved: Add individuall nonce when withdraw a student from a course.
* Improved: Students list on course edit screen can by sorted by: username, display name, first name last name.
* Improved: Students list on course edit screen is more like users list.

= 2.0.7 =
-------------------------------------------------

= 2.0.6.2 =
-------------------------------------------------
Fixed: HTML and entities issue on unit editor.
Fixed: Preview button.

= 2.0.6.1 =
-------------------------------------------------
* Fixed: Remove vulnerability to view any module.
* Fixed: Prerequisite Courses problem with access to next course.

= 2.0.6 =
-------------------------------------------------
* Added: Redirect to login page for guest users.
* Added: Number of failed attempts at student assessment.
* Added: Validation for user related functions to avoid processing when there is no logged user.

* Improved: Change "Duration" to "Time Limit" label.
* Improved: Unify all TinyMCE editors CP instance.
* Improved: Process of saving answers.
* Improved: Required unit message.
* Improved: Message box for paid course.
* Improved: Integration with WooCommerce - when student pay with PayPal, a student will be enrolled to the ordered courses.

* Updated: Bundled MarketPress to latest version.

* Fixed: Remove inclusion of CP assets on none CP pages.
* Fixed: WooCommerce "Out of stock" product status.
* Fixed: Deleting modules when section is deleted.
* Fixed: Missing untranslated texts.
* Fixed: Marketpress sale price.
* Fixed: Editor height.
* Fixed: Missing grade for manualy graded fields when using "Save & Exit".
* Fixed: Too many redirects error.
* Fixed: HTML tags not showing in Multiple/Single Choice field.
* Fixed: Ignoring "User also needs to pass all required assessments" unit option.
* Fixed: "Passing Grade" value one assessments page.